[package]
name = "ascii_art_maker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.4.3", features = ["fs"] }
tower-livereload = "0.8.0"
